--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,31 +3,21 @@
 {% block title %}Portal - Login{% endblock %}
 {% block header_files %}
     <link rel="stylesheet" href="{% static 'login/css/bootstrap-social.css' %}">
-    <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="{% static 'login/images/favicon.png' %}"/>
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="{% static 'login/vendor/bootstrap/css/bootstrap.min.css' %}">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css"
           href="{% static 'login/fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css"
           href="{% static 'login/fonts/iconic/css/material-design-iconic-font.min.css' %}">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="{% static 'login/vendor/animate/animate.css' %}">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="{% static 'login/vendor/css-hamburgers/hamburgers.min.css' %}">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="{% static 'login/vendor/animsition/css/animsition.min.css' %}">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="{% static 'login/vendor/select2/select2.min.css' %}">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="{% static 'login/vendor/daterangepicker/daterangepicker.css' %}">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="{% static 'login/css/util.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'login/css/main.css' %}">
-    <!--===============================================================================================-->
 {% endblock %}
+
 {% block content %}
     <div class="limiter">
         <div class="container-login100" style="background-image: url('{% static 'login/images/edited1.jpg' %}');">
@@ -44,67 +34,25 @@
                         <img src="{% static 'login/images/iiitalogoe.jpg' %}" alt="logo">
 					</span>
                     <hr>
-
-                    {#                    <div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">#}
-                    {#                        <input class="input100" type="text" name="email">#}
-                    {#                        <span class="focus-input100" data-placeholder="Email"></span>#}
-                    {#                    </div>#}
-                    {##}
-                    {#                    <div class="wrap-input100 validate-input" data-validate="Enter password">#}
-                    {#						<span class="btn-show-pass">#}
-                    {#							<i class="zmdi zmdi-eye"></i>#}
-                    {#						</span>#}
-                    {#                        <input class="input100" type="password" name="pass">#}
-                    {#                        <span class="focus-input100" data-placeholder="Password"></span>#}
-                    {#                    </div>#}
-
-                    {#					<div class="container-login100-form-btn">#}
-                    {#						<div class="wrap-login100-form-btn">#}
-                    {#							<div class="login100-form-bgbtn"></div>#}
-                    {#							<button class="login100-form-btn">#}
-                    {#								Login#}
-                    {#							</button>#}
-                    {#						</div>#}
-                    {#					</div>#}
-                    {#                    <button class="btn btn-lg btn-round btn-block btn-outline-secondary">Sign In</button>#}
-                    {#                </form>#}
-                    {#                <br>#}
-                    {#                    <a href="{% url 'social:begin' 'google-oauth2' %}">#}
-                    {#                    <button class="btn btn-block btn-social btn-lg btn-google btn-round btn-lg">#}
-                    {#                        <span class="fa fa-google" style="padding-top: 5px;"></span>#}
-                    {#                        <a href="{% url 'social:begin' 'google-oauth2' %}" style="color:white;"> Sign in#}
-                    {#                            with Google</a>#}
-                    {#                    </button>#}
                     <a href="{% url 'social:begin' 'google-oauth2' %}"
                        class="btn btn-block btn-social btn-lg btn-google btn-round btn-lg">
                         <span class="fa fa-google" style="padding-top: 2px;"></span>Login with Google</a>
+                </form>
             </div>
-        <div class="col-md-12"><p align="center" style="color: white;">Developed By <a href="https://www.facebook.com/vaib79" style="color: white;" id="credits">Vaibhav Gupta</a></p></div>
+            <div class="col-md-12"><p align="center" style="color: white;">Developed By <a
+                    href="https://github.com/dojutsu-user" style="color: white;" id="credits">Vaibhav Gupta</a></p>
+            </div>
         </div>
-
     </div>
     <div id="dropDownSelect1"></div>
 
-    <!--===============================================================================================-->
     <script src="{% static 'login/vendor/jquery/jquery-3.2.1.min.js' %}"></script>
-    <!--===============================================================================================-->
     <script src="{% static 'login/vendor/animsition/js/animsition.min.js' %}"></script>
-    <!--===============================================================================================-->
     <script src="{% static 'login/vendor/bootstrap/js/popper.js' %}"></script>
     <script src="{% static 'login/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
-    <!--===============================================================================================-->
     <script src="{% static 'login/vendor/select2/select2.min.js' %}"></script>
-    <!--===============================================================================================-->
     <script src="{% static 'login/vendor/daterangepicker/moment.min.js' %}"></script>
     <script src="{% static 'login/vendor/daterangepicker/daterangepicker.js' %}"></script>
-    <!--===============================================================================================-->
     <script src="{% static 'login/vendor/countdowntime/countdowntime.js' %}"></script>
-    <!--=============v==================================================================================-->
     <script src="{% static 'login/js/main.js' %}"></script>
 {% endblock %}
-{#{% block content %}#}
-{#{% if error_msg %}#}
-{#    {{ error_msg }}<br>#}
-{#{% endif %}#}
-{#<a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a><br>#}
-{#{% endblock %}#}
